solc_noopt_ossfuzz_seed_corpus/test_sol/test_aa2fbfcd0ea5a5e4478563fb860fae2e06648b79f5877a12890c27b9b0d61841_name_clash_imported_free_function_sol.sol
==== Source: s1.sol ====
function f() pure returns (uint) { return 1337; }
==== Source: s2.sol ====
import "s1.sol";
function f() pure returns (uint) { return 1; }
contract C {
  function g() public pure returns (uint) {
return f();
  }
}
// ----
// DeclarationError 1686: (s2.sol:17-63): Function with same name and parameter types defined twice.
